--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,49 @@
-.App {
-  text-align: center;
+html, .App {
+  background-color: #eee;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.pageHeader {
+  border-radius: 5px 5px 0 0;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.pageHeader a {
+  text-decoration: none;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.pageHeader .pageTitle {
+  display: inline-block;
 }
 
-.App-link {
-  color: #61dafb;
+.pageHeader a:hover .pageTitle{
+  color: #eee!important;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.loadingComponent .loadingIcon {
+  color: red;
+  height: 200px;
+  font-size: 36px;
+  transform: scale(1);
+  animation: pulse .5s infinite;
+}
+
+.twlBody {
+  position: relative;
+  background-color: #fff;
+  padding: 10px 20px;
+  padding-bottom: 140px;
+  min-height: 500px;
+  margin-bottom: 80px;
+  border-radius: 0 0 5px 5px;
+  box-shadow: 0px 0px 10px rgb(0 0 0 / 5%);
+}
+
+.twlBody .footer {
+  position: absolute;
+  display: block;
+  bottom: 10px;
+  width: calc(100% - 40px);
+}
+
+.iconInline {
+  margin-bottom: 4px;
 }
